# email-newsletter-api

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-72557aa9957f3dcb6085a52826b14404f33fdbd7c8802dd612786efe2b3a7a10.json
migrations/: 20240312075740_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  healthcheck.rs
