[package]
name = "email-newsletter-api"
version = "0.1.0"
edition = "2021"
authors = ["Zach Kirlew <zachkirlew@gmail.com>"]

[dependencies]
actix-web = "4"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.11.25"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter-api"

