[package]
name = "email-newsletter-api"
version = "0.1.0"
edition = "2021"
authors = ["Zach Kirlew <zachkirlew@gmail.com>"]

[dependencies]
actix-web = "4"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.11.25"
serde = { version = "1.0.197", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls", "macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]
once_cell = "1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter-api"

